# SFC

./: CMakeLists.txt  Particle.h  main.tex  mainwindow.cpp  mainwindow.h  sfc.pro  zdroje.bib
Function/: Ackley.cpp  Ackley.h  BukinN6.cpp  BukinN6.h  CrossInTray.cpp  CrossInTray.h  DropWave.cpp  DropWave.h  Easom.cpp  Easom.h  Function.cpp  Function.h  Griewank.cpp  Griewank.h  HolderTable.cpp  HolderTable.h  Levy.cpp  Levy.h  LevyN13.cpp  LevyN13.h  Michalewicz.cpp  Michalewicz.h  SchafferN2.cpp  SchafferN2.h  SchafferN4.cpp  SchafferN4.h  ShafferN2.cpp  ShafferN2.h  ShafferN4.cpp  ShafferN4.h  SixHumpCamel.cpp  SixHumpCamel.h  Sphere.cpp  Sphere.h  StyblinskiTang.cpp  StyblinskiTang.h
